Styles to fix android horizontal scroll

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -19,7 +19,8 @@ body {
   font-family: 'Zen Maru Gothic', sans-serif !important;
   scroll-behavior: smooth;
   overflow-x: hidden;
-  max-width: 100vw;
+  width: 100%;
+  position: relative;
   }
 
 a {
